--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@
 # NOTE: it looks like you need to rebuild + repush everytime you update this _config.yml file
 
 ### Site Settings ###
-title               : Harsh Baberwal 
+title               : PossibleCorg 
 description         : >-
-                      Tryna be a data scientist
+                      I may or may not be a corgi.
 baseurl             : "/online_cv_public"   # Change to empty quotes if you are hosting your site at <your-username>.github.io directly,
 #                                             otherwise will be hosted at <your-username>.github.io/{{base_url}}
 repository          : jnaiman               # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
@@ -34,26 +34,26 @@ nav_exclude:                                            # The following paths ar
 
 ### Author Info ###
 author:
-  name              : Harsh
+  name              : A. P. Corgi
   image             : https://dogtime.com/assets/uploads/gallery/pembroke-welsh-corgi-dog-breed-pictures/prance-8.jpg
-#  behance           : your_username
-#  dribbble          : your_username
-  email             : harshbaberwal2k19@gmail.com
-#  facebook          : your_username
-  github            : harshbaberwal21 # JPN
+  behance           : your_username
+# dribbble          : your_username
+  email             : username@domain.com
+  facebook          : your_username
+  github            : jnaiman # JPN
 # gitlab            : your_username
 # instagram         : your_username
 # kaggle            : your_username
-  linkedin          : harsh-baberwal-30331113a
-#  medium            : your_username
-#  soundcloud        : your_username
-#  spotify           : your_username
-#  stackoverflow     : your_user_id
-#  tumblr            : your_username.tumblr.com
-#  twitch            : your_username
-#  twitter           : your_username
-#  vimeo             : your_username
-#  youtube           : your_channel_name
+  linkedin          : your_username
+  medium            : your_username
+# soundcloud        : your_username
+# spotify           : your_username
+# stackoverflow     : your_user_id
+# tumblr            : your_username.tumblr.com
+  twitch            : your_username
+  twitter           : your_username
+  vimeo             : your_username
+  youtube           : your_channel_name
 # keybase           : your_username
 
 
